--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <ul class="navbar-nav">
 				<li class="nav-item"><a href="about.html">About</a></li>
 				<li class="nav-item"><a href="https://spicinemas.typeform.com/to/nFoWGC">Nominate Speaker</a></li>
-				<li class="nav-item"><a href="past events.html">Past Events</a></li>
+				<li class="nav-item"><a href="">Partner with us</a></li>
 				<!--<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
 				<li class="nav-item"><a href="#tickets">Passes</a></li>
 				<li class="nav-item"><a href="#contact">Contact</a></li>
@@ -74,8 +74,9 @@
 					<a class="dropdown-toggle link__last" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 					<ul class="dropdown-menu dropdown-menu--right" aria-labelledby="navbarDropdownMenuLink">
 						<li class="nav-item"><a href="#">Campus Ambassador</a></li>
+						<li class="nav-item"><a href="past events.html">Past Events</a></li>
 						<li class="nav-item"><a href="#">Blog</a></li>
-						<li class="nav-item"><a href="#">Letter to the audience</a></li>
+						<li class="nav-item"><a href="#">Latter to the audience</a></li>
 						<li class="nav-item"><a href="#">YouTube TEDx</a></li>
 						
 					</ul>
@@ -97,7 +98,8 @@
 	    <div class="container">
             <div class="hero__caption" data-start="opacity:1; transform[swing]:translateY(0px)" data-500-start="opacity:0; transform[swing]:translateY(-100px)">
 			    <div class="hero__row">
-					<h6 class="title__h6 title">7<sup>th</sup> Edition</h6>
+					
+					<h6 class="title__h6 title" ><span color="red">7<sup>th</sup></span> Edition</h6>
 			        <h2 class="title__h1 hero__title hero__title_line">Ideas Worth Spreading</h2>
 				    <p class="hero__description">
 							Imagine a day filled with brilliant speakers, thought-provoking videos and mind-blowing conversations. The next revolution won't be the one where we bring our guns, it will be the one where we bring our ideas.	</p>
