--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <div class="hero__caption" data-start="opacity:1; transform[swing]:translateY(0px)" data-500-start="opacity:0; transform[swing]:translateY(-100px)">
 			    <div class="hero__row">
 		            <h6 class="title__h6 title__overhead">introduction</h6>
-			        <h1 class="title__h1 hero__title hero__title_line">Only photograph<br/>what you love.</h1>
-				    <p class="hero__description">Photography is a kind of visual literature. When you shoot, you do something meaningful: you build a frame, turn something into it, remove something.</p>
+			        <h1 class="title__h1 hero__title hero__title_line">Only some<br/>title what you love.</h1>
+				    <p class="hero__description">title is a kind of visual literature. When you shoot, you do something meaningful: you build a frame, turn something into it, remove something.</p>
                     <a  class="btn hero__btn" class="slideInUp" href="#passes">Get your passes now</a>
 				</div>
 			</div>
@@ -84,10 +84,10 @@
 			</div>
 			<div class="row justify-content-center">
 			    <div class="col-12 col-lg-8 col__quote text-center" data-bottom="transform[swing]:translateY(0px)" data--400-top="transform[swing]:translateY(-100px)">
-				    <h2 class="title__section title__h1 title_decoration title_vertical-line-top">Hello.</h2>
+				    <h2 class="title__section title__h1 title_decoration title_vertical-line-top">Theme Hello.</h2>
 					<blockquote class="block-quote block-quote__about">
 					    <p>All that we do is work on the style of life, on "being." The object as such is not very interesting. I wonder how people will live with him, what metamorphoses he will undergo in the house. I always liked very simple things. In all. Doing simple things is the most difficult thing. If we talk about simplicity, then it is a synthesis.</p>
-						— <cite>Edward Oliver</cite>
+						— <cite>theme tagline</cite>
 					</blockquote>
 				</div>
             </div>
@@ -101,7 +101,7 @@
     	<div class="container">
             <div class="row">
 			    <div class="col section__header-wrap">
-				    <h2 class="title__section title__h1 title_horizontal-line"><span class="reveal reveal_gray">My Works.</span></h2>
+				    <h2 class="title__section title__h1 title_horizontal-line"><span class="reveal reveal_gray">Pictures</span></h2>
 				    <p class="section__subtitle">A photo — is a search for what can get into the frame. When you limit events to a frame — You change these events.</p>
 				</div>
 			</div>
@@ -210,19 +210,19 @@
 			    <div class="col-12 col-md-4">
 				    <div class="counter">
 				        <div class="counter__date title_decoration">1270</div>
-					    <div class="counter__name">Clients</div>
+					    <div class="counter__name">Attendies</div>
 					</div>
 				</div>
 			    <div class="col-12 col-md-4">
 				    <div class="counter">
 				        <div class="counter__date title_decoration">4357</div>
-					    <div class="counter__name">Photos</div>
+					    <div class="counter__name">Speakers</div>
 					</div>
 				</div>
 			    <div class="col-12 col-md-4">
 				    <div class="counter counter_last-child">
 				        <div class="counter__date title_decoration">634</div>
-					    <div class="counter__name">Albums</div>
+					    <div class="counter__name">Whatever</div>
 					</div>
 				</div>
 		    </div>
@@ -235,7 +235,7 @@
     	<div class="container">
             <div class="row">
 			    <div class="col section__header-wrap">
-				    <h2 class="title__section title__h1 title_center"><span class="reveal reveal_gray">Testimonials.</span></h2>
+				    <h2 class="title__section title__h1 title_center"><span class="reveal reveal_gray">Start Speakers.</span></h2>
 				</div>
 			</div>
 		</div>
@@ -318,7 +318,7 @@
     	<div class="container">
             <div class="row">
 			    <div class="col section__header-wrap">
-				    <h2 class="title__section title__h1 title_horizontal-line"><span class="reveal reveal_gray">Pricing.</span></h2>
+				    <h2 class="title__section title__h1 title_horizontal-line"><span class="reveal reveal_gray">Passes</span></h2>
 				    <p class="section__subtitle">The photo leaves open moments, which immediately overlap with the pressure of time.</p>
 				</div>
 			</div>
@@ -328,7 +328,7 @@
 		    <div class="swiper-wrapper">
 			    <!-- Item -->
 			    <div class="swiper-slide pricing-grid__item pricing-grid__item_one" style="background-image: url(img/image_pricing_01.jpg)">
-				    <h4 class="title__h4">Model Photography.</h4>
+				    <h4 class="title__h4">Patrons</h4>
 				    <div class="pricing-options">
 					    <div class="pricing-options__name">Photos</div>
 					    <div class="pricing-options__included">Package of 50</div>
@@ -358,7 +358,7 @@
 			
 			    <!-- Item -->
 			    <div class="swiper-slide pricing-grid__item pricing-grid__item_two" style="background-image: url(img/image_pricing_02.jpg)">
-				    <h4 class="title__h4">Photography of events.</h4>
+				    <h4 class="title__h4">Corporate</h4>
 				    <div class="pricing-options">
 					    <div class="pricing-options__name">Photos</div>
 					    <div class="pricing-options__included">Package of 150</div>
@@ -388,7 +388,7 @@
 			
 			    <!-- Item -->
 			    <div class="swiper-slide pricing-grid__item pricing-grid__item_three" style="background-image: url(img/image_pricing_03.jpg)">
-				    <h4 class="title__h4">Corporate photography.</h4>
+				    <h4 class="title__h4">Gold</h4>
 				    <div class="pricing-options">
 					    <div class="pricing-options__name">Photos</div>
 					    <div class="pricing-options__included">Package of 500</div>
@@ -418,7 +418,7 @@
 
                 <!-- Item -->			
 			    <div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(img/image_pricing_05.jpg)">
-				   <h4 class="title__h4">Photography for movies.</h4>
+				   <h4 class="title__h4">Silver</h4>
 				    <div class="pricing-options">
 					    <div class="pricing-options__name">Photos</div>
 					    <div class="pricing-options__included">Unlimited</div>
@@ -443,7 +443,34 @@
 					    <div class="price price_small">Individual</div>
 					    <a href="#price" class="btn-link btn-link_right">Explore</a>
 				    </footer>
-			    </div>
+				</div>
+				<div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(img/image_pricing_05.jpg)">
+					<h4 class="title__h4">Student</h4>
+					 <div class="pricing-options">
+						 <div class="pricing-options__name">Photos</div>
+						 <div class="pricing-options__included">Unlimited</div>
+					 </div>
+					 <div class="pricing-options">
+						 <div class="pricing-options__name">Processing</div>
+						 <div class="pricing-options__included">All types of installation</div>
+					 </div>
+					 <div class="pricing-options">
+						 <div class="pricing-options__name">Type of camera</div>
+						 <div class="pricing-options__included">Professional</div>
+					 </div>
+					 <div class="pricing-options">
+						 <div class="pricing-options__name">Resolution</div>
+						 <div class="pricing-options__included">68 MP</div>
+					 </div>
+					 <div class="pricing-options">
+						 <div class="pricing-options__name">Term</div>
+						 <div class="pricing-options__included">Individual</div>
+					 </div>
+					 <footer class="pricing-footer">
+						 <div class="price price_small">$25</div>
+						 <a href="#price" class="btn-link btn-link_right">Explore</a>
+					 </footer>
+				 </div>
 			    <!-- /Item -->
 		    </div>
 			
@@ -518,14 +545,14 @@
 			    <div class="col-md-6 col-lg-4">
 				    <h5 class="title title__h6 text_uppercase">Office</h5>
 				    <ul class="footer__contacts list-unstyled">
-					    <li>756 Livingston Street,<br/>Brooklyn, NY 11201</li>
+					    <li>Estancia <br/>Chennai-603203</li>
 				    </ul>
 				</div>
 			    <div class="col-md-6 col-lg-4">
 				    <h5 class="title title__h6 text_uppercase">Get in touch</h5>
 				    <ul class="footer__contacts list-unstyled">
-					    <li>E.: work@e.oliver.com</li>
-                        <li>T.: +1 (00) 123-45-67</li>
+					    <li>E.: contact@Tedxchennai.com</li>
+                        <li>T.: +91 123-45-678-90</li>
 				    </ul>
 				</div>
 			    <div class="col-md-6 col-lg-4">
