--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				</figure>
             </div>
 			
-			<a href="gallery.html" class="btn-link btn-link_right">explore gallery</a>
+			<a href="gallery.html" class="btn-link btn-link_right">Explore gallery</a>
 		</div>		
 	</section>
     <!-- /My Works -->
@@ -351,7 +351,7 @@
 				    </div>
 				    <footer class="pricing-footer">
 					    <div class="price">$39</div>
-					    <a href="#price" class="btn-link btn-link_right">Explore</a>
+					    <a href="#price" class="btn-link btn-link_right">But now</a>
 				    </footer>	
 			    </div>
 			    <!-- /Item -->
@@ -381,7 +381,7 @@
 				    </div>
 				    <footer class="pricing-footer">
 					    <div class="price">$59</div>
-					    <a href="#price" class="btn-link btn-link_right">Explore</a>
+					    <a href="#price" class="btn-link btn-link_right">But now</a>
 				    </footer>	
 			    </div>
 			    <!-- /Item -->
@@ -411,7 +411,7 @@
 				    </div>
 				    <footer class="pricing-footer">
 					    <div class="price">$99</div>
-					    <a href="#price" class="btn-link btn-link_right">Explore</a>
+					    <a href="#price" class="btn-link btn-link_right">But now</a>
 				    </footer>
 			    </div>
 			    <!-- /Item -->
@@ -441,7 +441,7 @@
 				    </div>
 				    <footer class="pricing-footer">
 					    <div class="price price_small">Individual</div>
-					    <a href="#price" class="btn-link btn-link_right">Explore</a>
+					    <a href="#price" class="btn-link btn-link_right">But now</a>
 				    </footer>
 				</div>
 				<div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(img/image_pricing_05.jpg)">
@@ -468,7 +468,7 @@
 					 </div>
 					 <footer class="pricing-footer">
 						 <div class="price price_small">$25</div>
-						 <a href="#price" class="btn-link btn-link_right">Explore</a>
+						 <a href="#price" class="btn-link btn-link_right">But now</a>
 					 </footer>
 				 </div>
 			    <!-- /Item -->
