--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
 			    <div class="col-12 col-lg-8 col__quote text-center" data-bottom="transform[swing]:translateY(0px)" data--400-top="transform[swing]:translateY(-100px)">
 				    <h2 class="title__section title__h1 title_decoration title_vertical-line-top">WE</h2>
 					<blockquote class="block-quote block-quote__about">
-						<p>" Yaadhum oore, yaavarum keleir”<br>
-							" translation in english”</p>
-						— <cite>guy</cite>
+						<p>"யாதும் ஊரே யாவரும் கேளிர்"<br>
+							"To us, all towns are our own, everyone our kin"
+							<br>
+						</p>
+						— <cite>Kaniyan Poongundranaar, Purananooru - 192</cite>
 					</blockquote>
 				</div>
             </div>
