--- a/gallery.html
+++ b/gallery.html
@@ -144,8 +144,8 @@
 				
 				<!-- Picture -->
 				<figure class="item-portfolio item-portfolio__column-three category-speakers">
-					<a class="link-photo" href="img/34_image.jpg" data-width="1280" data-height="1920" data-caption="<div class='options__photo'><span>MAKE</span>NIKON D700</div><div class='options__photo'><span>SHUTTER SPEED</span>1/2500s</div><div class='options__photo'><span>APERTURE</span>f/1.2</div><div class='options__photo'><span>FOCAL LENGTH</span>25mm</div><div class='options__photo'><span>ISO</span>200</div>">
-						<img class="image-portfolio" src="img/34_image.jpg" alt="Photo">
+					<a class="link-photo" href="img/gallery27.jpg" data-width="1280" data-height="1920" data-caption="<div class='options__photo'><span>MAKE</span>NIKON D700</div><div class='options__photo'><span>SHUTTER SPEED</span>1/2500s</div><div class='options__photo'><span>APERTURE</span>f/1.2</div><div class='options__photo'><span>FOCAL LENGTH</span>25mm</div><div class='options__photo'><span>ISO</span>200</div>">
+						<img class="image-portfolio" src="img/gallery27.jpg" alt="Photo">
 					</a>
 					<ul class="item-details">
 					    <li><a href="#location"><i class="fa fa-location-arrow" aria-hidden="true"></i></a></li>
@@ -177,14 +177,23 @@
 
                 <!-- Picture -->				
 				<figure class="item-portfolio item-portfolio__column-three category-speakers">
-					<a class="link-photo" href="img/06_image.jpg" data-width="900" data-height="900" data-caption="<div class='options__photo'><span>MAKE</span>NIKON D700</div><div class='options__photo'><span>SHUTTER SPEED</span>1/2500s</div><div class='options__photo'><span>APERTURE</span>f/1.2</div><div class='options__photo'><span>FOCAL LENGTH</span>25mm</div><div class='options__photo'><span>ISO</span>200</div>">
-						<img class="image-portfolio" src="img/06_image.jpg" alt="Photo">
+					<a class="link-photo" href="img/gallery28.jpg" data-width="900" data-height="900" data-caption="<div class='options__photo'><span>MAKE</span>NIKON D700</div><div class='options__photo'><span>SHUTTER SPEED</span>1/2500s</div><div class='options__photo'><span>APERTURE</span>f/1.2</div><div class='options__photo'><span>FOCAL LENGTH</span>25mm</div><div class='options__photo'><span>ISO</span>200</div>">
+						<img class="image-portfolio" src="img/gallery28.jpg" alt="Photo">
 					</a>
 					<ul class="item-details">
 					    <li><a href="#location"><i class="fa fa-location-arrow" aria-hidden="true"></i></a></li>
 						<li class="item-details_right"><a href="#like"><i class="fa fa-heart" aria-hidden="true"></i></a><span>28</span></li>
 					</ul>
 				</figure>
+				   <!-- Picture -->				
+				<figure class="item-portfolio item-portfolio__column-three category-speakers">
+					<a class="link-photo" href="img/gallery29.jpg" data-width="900" data-height="900" data-caption="<div class='options__photo'><span>MAKE</span>NIKON D700</div><div class='options__photo'><span>SHUTTER SPEED</span>1/2500s</div><div class='options__photo'><span>APERTURE</span>f/1.2</div><div class='options__photo'><span>FOCAL LENGTH</span>25mm</div><div class='options__photo'><span>ISO</span>200</div>">
+						<img class="image-portfolio" src="img/gallery29.jpg" alt="Photo">
+					</a>
+					<ul class="item-details">
+					    <li><a href="#location"><i class="fa fa-location-arrow" aria-hidden="true"></i></a></li>
+						<li class="item-details_right"><a href="#like"><i class="fa fa-heart" aria-hidden="true"></i></a><span>28</span></li>
+					</ul>
 				
 				<!-- Picture -->
 				<figure class="item-portfolio item-portfolio__column-three category-culture">
