--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				    <p class="hero__description">
 				    	Imagine a day filled with brilliant speakers, thought-provoking video and mind-blowing conversation. The next revolution won't be one where we bring out the guns, it will be the one where we bring our ideas.
 				    </p>
-                    <a class="btn hero__btn" href="#tickets">Coming soon</a>
+                    <a class="btn hero__btn" href="#tickets">Sharp your mind we are coming real soon</a>
                      <a class="ct-btn-scroll" href="#theme">
 			<img alt="Arrow Down Icon" src="images/arrow-down.png">
 		</a>
@@ -109,7 +109,7 @@
 	<!-- /Hero -->
 	<br>
 <br>
-	<!-- Hello -->
+	
     <section class="section section__hello section_no-space-bottom" id="theme">
         <div class="container">
             <div class="box-image">
@@ -272,7 +272,7 @@
     <!-- /My Works -->
 	
 	<!-- Statistics -->
-	<section class="section section-counters text-center">
+	<section class="section section-counters text-center" id ="Statistics" >
         <div class="container">
 		    <div class="row os">
 					<div class="col-12 col-md-4">
@@ -577,9 +577,9 @@
 		</div>
 	</div>
 </section>
-
+<div class="container" ></div>
 <!-- History -->
-<section class="section section-history section_no-space-bottom section_first">
+<section class="section section-history section_no-space-bottom section_first"  id="pastevents">
 	<div class="container">
 		<div class="row">
 			<div class="col section__header-wrap">
@@ -681,11 +681,13 @@ with “What IF”.
                     <p class="text-block">A photo — is a search for what can get into the frame. When you limit events to a frame — You change these events.</p>
 					<a id="open-popup" class="btn btn__contact" href="#">Leave a message</a>
 				</div>
-			    <div class="col-lg-8" position="right">
-                    <div class="col-4 col-md-4 col-lg-3 brand-col" >
-						<img class="brand-col__logo"  src="images/thepopcorn.png" alt="ThePopcorn">
-					</div>
-				</div>
+				<span style="display:inline-block; width: 350px;"></span>
+			
+				<div class="right">
+					<a href="http://thepopcorn.tech/" target="_blank" rel=”noopener” rel=”noreferrer” class="opacity-10"><img style="height: 90px; width: 380px;"src="images/POP.png"></a>
+				   
+				 
+		</div>
 			</div>
 		</div>
 			</section>
@@ -816,6 +818,4 @@ with “What IF”.
     <script src="js/common.js" type="text/javascript"></script>
 	
 </body>
-
-<!-- Mirrored from netgon.net/artstyles/oliver/new/dark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Nov 2019 13:54:04 GMT -->
 </html>
