--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
-	<link rel="shortcut icon" href="images/favicons/favicon.png" type="image/png">
+	<link rel="shortcut icon" href="images/popx.png" type="image/png">
 
     <!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style/style.css"/>
@@ -464,7 +464,10 @@
 					<div class="col-lg-4">
 						<p class="text-block">A photo — is a search for what can get into the frame. When you limit events to a frame — You change these events.</p>
 						<a id="open-popup" class="btn btn__contact" href="#">Leave a message</a>
+
 					</div>
+					<br>
+					<br>
 					<span style="display:inline-block; width: 350px;"></span>
 				
 					<div class="right">
