--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
-	<link rel="shortcut icon" href="images/favicons/favicon.png" type="image/png">
+	<link rel="shortcut icon" href="images/popx.png" type="image/png">
 
     <!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style/style.css"/>
@@ -88,7 +88,7 @@
 				    <p class="hero__description">
 				    	Imagine a day filled with brilliant speakers, thought-provoking video and mind-blowing conversation. The next revolution won't be one where we bring out the guns, it will be the one where we bring our ideas.
 				    </p>
-                    <a class="btn hero__btn" href="#tickets">Sharp your mind we are coming real soon</a>
+                    <a class="btn hero__btn" href="#tickets">Sharp your mind, we are coming real soon</a>
                      <a class="ct-btn-scroll" href="#theme">
 			<img alt="Arrow Down Icon" src="images/arrow-down.png">
 		</a>
@@ -385,6 +385,10 @@
 	 /Testimonials -->
 <!-- Pricing -->
 <section class="section" id="tickets">
+<br>
+<br>
+<br>
+
 	<div class="container">
 		<div class="row">
 			<div class="col section__header-wrap">
@@ -398,7 +402,7 @@
 	<div class="pricing-grid swiper-container">
 		<div class="swiper-wrapper">
 			<!-- Item -->
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_one" style="background-image: url(img/image_pricing_01.jpg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_one" style="background-image: url(images/tickets.jpeg)">
 				<h4 class="title__h4">Patrons</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">We love patrons! Be the closest ones to the ideas with exclusive access to the speakers</div>
@@ -435,7 +439,7 @@
 			<!-- /Item -->
 		
 			<!-- Item -->
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_two" style="background-image: url(img/image_pricing_02.jpg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_two" style="background-image: url(images/tickets.jpeg)">
 				<h4 class="title__h4">Corporates & Startups</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">Meet changemakers and make lasting connections.</div>
@@ -467,7 +471,7 @@
 			<!-- /Item -->
 		
 			<!-- Item -->
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_three" style="background-image: url(img/image_pricing_03.jpg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_three" style="background-image: url(images/tickets.jpeg)">
 				<h4 class="title__h4">Gold</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">Get your Willy Wonka's and get closer to the stage.</div>
@@ -502,7 +506,7 @@
 			<!-- /Item -->
 
 			<!-- Item -->			
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(img/image_pricing_05.jpg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(images/tickets.jpeg)">
 			   <h4 class="title__h4">Silver</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">Be your own knight in shining armor.</div>
@@ -536,7 +540,7 @@
 
 			<!-- /Item -->
 			<!--/Item-->
-			  <div class="swiper-slide pricing-grid__item pricing-grid__item_five" style="background-image: url(img/image_pricing_05.jpg)">
+			  <div class="swiper-slide pricing-grid__item pricing-grid__item_five" style="background-image: url(images/tickets.jpeg)">
 			   <h4 class="title__h4">Student</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">The secret in education lies in respecting the students. We have special offers for you.</div>
@@ -669,7 +673,7 @@ with “What IF”.
 <!-- /History -->
 
 	<!-- Contact -->
-	<section class="section section-contact section-onescreen">
+	<section class="section section-contact section-onescreen" id ="contact">
 	    <div class="container">	
 		    <div class="row">
 			    <div class="col-lg-12">
@@ -681,6 +685,8 @@ with “What IF”.
                     <p class="text-block">A photo — is a search for what can get into the frame. When you limit events to a frame — You change these events.</p>
 					<a id="open-popup" class="btn btn__contact" href="#">Leave a message</a>
 				</div>
+				<br>
+					<br>
 				<span style="display:inline-block; width: 350px;"></span>
 			
 				<div class="right">
