--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 		            <h6 class="title__h6 title">TEDxCHENNAI</h6>
 			        <h2 class="title__h1 hero__title hero__title_line">Ideas Worth Spreading</h2>
 				    <p class="hero__description">
-				    	Imagine a day filled with brilliant speakers, thought-provoking video and mind-blowing conversation. The next revolution won't be one where we bring out the guns, it will be the one where we bring our ideas.
-					</p>
+							Imagine a day filled with brilliant speakers, thought-provoking videos and mind-blowing conversations. The next revolution won't be the one where we bring our guns, it will be the one where we bring our ideas.	</p>
 					<br>
 					<br>
                     <a class="btn hero__btn" href="#tickets">We are coming real soon</a>
@@ -677,7 +676,7 @@ with “What IF”.
 	</section>
 
 	<!-- Contact -->
-	<section class="section section-contact section-onescreen" id ="contact">
+	<section class="section section-contact" id ="contact">
 	    <div class="container">	
 		    <div class="row">
 			    <div class="col-lg-12">
@@ -698,9 +697,12 @@ with “What IF”.
 		</div>
 			</div>
 		</div>
+		
+		</div>
 			</section>
 	
 	<!-- /Contact -->
+	
 	<footer class="footer">
 			<div class="container">
 				<div class="row">
