--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	
 </head>
 <body>
+	
     <div class="loading animated">
 	    <div class="loading-wrap animated bounceInLeft">
 		    <img class="logotype animated infinite bounceIn" src="images/tedx-logo.png" alt="TEDxChennai loding animation">
@@ -78,8 +79,9 @@
 
 	<!-- /Header -->
 
-    <!-- Hero -->
-    <header class="hero jarallax" data-video="video/ted1.mp4">
+	<section id="#">  <!-- Hero -->
+	<header class="hero jarallax" data-video="video/ted1.mp4" >
+		
 	    <div class="container">
             <div class="hero__caption" data-start="opacity:1; transform[swing]:translateY(0px)" data-500-start="opacity:0; transform[swing]:translateY(-100px)">
 			    <div class="hero__row">
@@ -112,7 +114,7 @@
 	<!-- /Hero -->
 	<br>
 <br>
-	
+</section>
     <section class="section section__hello section_no-space-bottom" id="theme">
         <div class="container">
             <div class="box-image">
@@ -831,7 +833,11 @@ with “What IF”.
 	<!-- JavaScripts -->
 	<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
 	<script src="js/plugins.js" type="text/javascript"></script>
-	
+	<script>
+			$(window).on('beforeunload', function(){
+				$(window).scrollTop(0);
+			});
+			</script>
     <script src="js/common.js" type="text/javascript"></script>
 	
 </body>
