--- a/index.html
+++ b/index.html
@@ -681,7 +681,11 @@ with “What IF”.
 	<section class="section section-contact" id ="contact">
 	    <div class="container">	
 		    <div class="row">
+
 			    <div class="col-lg-12">
+					<br>
+					<br>
+					<br>
 				    <h2 class="title__section title__h1 title_horizontal-line"><span class="reveal reveal_gray">Reach out to us.</span></h2>
 			    </div>
 			</div>
@@ -689,12 +693,14 @@ with “What IF”.
 			    <div class="col-lg-4">
                     <p class="text-block">"Nothing in life is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less." ― Marie Curie</p>
 					<a id="open-popup" class="btn btn__contact" href="#">Leave a message</a>
+				
 				</div>
-				<br>
-					<br>
+				
 				<span style="display:inline-block; width: 350px;"></span>
 			
 				<div class="right">
+					<br>
+					<br>
 					<a href="http://thepopcorn.tech/" target="_blank" rel=”noopener” rel=”noreferrer” class="opacity-100"><img style="height: 60px; width: 290px;"src="images/POP.png"></a>
 		</div>
 			</div>
@@ -704,7 +710,7 @@ with “What IF”.
 			</section>
 	
 	<!-- /Contact -->
-	
+	<section class="section section-contact" >
 	<footer class="footer">
 			<div class="container">
 				<div class="row">
@@ -731,7 +737,7 @@ with “What IF”.
 			</div>
 		</footer>
 	
-
+	</section>
     <!-- PhotoSwipe -->
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="pswp__bg"></div>
