--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
     <meta name="description" content="" />
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="144x144" href="images/favicons/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
+	
 	<link rel="shortcut icon" href="images/popx.png" type="image/png">
 
     <!-- Styles -->
@@ -105,9 +102,9 @@
 	<br>
 		<div class="hero__social animated slideInUp">
 			
-		    <a class="link_decoration" target=_blank href="https://www.facebook.com/TEDxChennai/">Facebook</a>
-			<a class="link_decoration" target=_blank href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a>
-			<a class="link_decoration" target=_blank href="https://www.instagram.com/tedxchennai/?hl=en">Instagram</a>
+		    <a class="link_decoration" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">Facebook</a>
+			<a class="link_decoration" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a>
+			<a class="link_decoration" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagram</a>
 		</div>
 	
     </header>	
@@ -532,7 +529,7 @@
 					<h6 class="title__h6 title__overhead">2016 </h6>
 					<h2 class="title title__h2 title__section title_normal">Erasing The Box </h2>
 					<p class="block-description">The goal of TEDxChennai is to promote free thought. Through the ideas that are shared on stage we aim to facilitate a conversation between thinkers, doers and changemakers. The idea is that these very conversations impact new thinking. It isn't about thinking outside the box anymore. It's about erasing that very box and venturing out to explore new thoughts -an excursion for the mind of sorts. It's about shoving that box aside and starting fresh on that slate. Light travels faster than sound. Similarly, ideas travel faster when boundaries are eliminated. No box should be able to limit your ideas. Let your imagination take flight. Erase the box. Embrace the possibilities.</p>
-					<P><a class="btn hero__btn" target= "blank" href="https://www.ted.com/tedx/events/19122">Know more</a></P></div>
+					<P><a class="btn hero__btn" target= "blank" rel=”noopener” rel=”noreferrer” href="https://www.ted.com/tedx/events/19122">Know more</a></P></div>
 			</div>
 		</div>
 		<!-- /Item -->
@@ -544,7 +541,7 @@
 					<h6 class="title__h6 title__overhead">2018</h6>
 					<h2 class="title title__h2 title__section title_normal">Revolution </h2>
 					<p class="block-description">Most problems today seem scary. It may seem like the world is going to end soon. But actually many of these problems can be easily tackled – solutions for these exist! Its just that they may be unseen, unheard, unscaled or unfunded. Never in history has there been a time when it’s been so easy to find solutions to problems that plague us, its just that we have been blinded temporarily. How the road ahead will turn out depends greatly on the narratives we chose to apply – to understand today’s needs, to imagine tomorrow’s and to walk with a collective and responsible way forward. The next revolution won’t be one where we bring out the guns. The next revolution is one where we bring our ideas. </p>
-				<P><a class="btn hero__btn" target= "blank" href="https://www.ted.com/tedx/events/24741">Know more</a></P></div>
+				<P><a class="btn hero__btn" target= "blank" rel=”noopener” rel=”noreferrer” href="https://www.ted.com/tedx/events/24741">Know more</a></P></div>
 			</div>
 			<div class="col-sm-auto col-lg-5 order-1 order-lg-2">
 				<div class="block-image _right">
@@ -589,7 +586,7 @@ to question the status quo and leave no stone unturned in exploring the
 endless possibilities of life. We believe that the next big change will start
 with “What IF”.
 </p>
-					<P><a class="btn hero__btn" target= "blank" href="https://www.ted.com/tedx/events/31903">Know more</a></P></div>
+					<P><a class="btn hero__btn" target= "blank" rel=”noopener” rel=”noreferrer” href="https://www.ted.com/tedx/events/31903">Know more</a></P></div>
 			</div>
 		</div>
 		<!-- /Item -->
@@ -701,7 +698,7 @@ with “What IF”.
 				<div class="right">
 					<br>
 					<br>
-					<a href="http://thepopcorn.tech/" target="_blank" rel=”noopener” rel=”noreferrer” class="opacity-100"><img style="height: 60px; width: 290px;"src="images/POP.png"></a>
+					<a href="https://thepopcorn.tech/" target="blank" rel=”noopener” rel=”noreferrer” class="opacity-100"><img style="height: 60px; width: 290px;"src="images/POP.png" alt="Thepopcorn"> </a>
 		</div>
 			</div>
 		</div>
@@ -730,7 +727,7 @@ with “What IF”.
 					<div class="col-md-6 col-lg-4">
 						<h5 class="title title__h6 text_uppercase">Social</h5>
 						<ul class="footer__contacts list-unstyled">
-							<li>Connect us on <a class="link_decoration" target="blank" href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" href="https://www.instagram.com/tedxchennai/?hl=en">Instagrem</a></li>
+							<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagrem</a></li>
 						</ul>
 					</div>
 				</div>
@@ -845,6 +842,52 @@ with “What IF”.
 			});
 			</script>
     <script src="js/common.js" type="text/javascript"></script>
-	
+	<body oncontextmenu="return false;"></body>
+<!-- Share Window -->
+<script language="JavaScript">
+    
+    window.onload = function() {
+      document.addEventListener("contextmenu", function(e){
+        e.preventDefault();
+      }, false);
+      document.addEventListener("keydown", function(e) {
+      //document.onkeydown = function(e) {
+        // "I" key
+        if (e.ctrlKey && e.shiftKey && e.keyCode == 73) {
+          disabledEvent(e);
+        }
+        // "J" key
+        if (e.ctrlKey && e.shiftKey && e.keyCode == 74) {
+          disabledEvent(e);
+        }
+        // "S" key + macOS
+        if (e.keyCode == 83 && (navigator.platform.match("Mac") ? e.metaKey : e.ctrlKey)) {
+          disabledEvent(e);
+        }
+        // "U" key
+        if (e.ctrlKey && e.keyCode == 85) {
+          disabledEvent(e);
+        }
+        // "F12" key
+        if (event.keyCode == 123) {
+          disabledEvent(e);
+        }
+      }, false);
+      function disabledEvent(e){
+        if (e.stopPropagation){
+          e.stopPropagation();
+        } else if (window.event){
+          window.event.cancelBubble = true;
+        }
+        e.preventDefault();
+        return false;
+      }
+    };
+  </script>
+
+<!-- Loading Progress Bar -->
+
+
+</body>
 </body>
 </html>
