--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 			<div class="collapse navbar-collapse" id="navbarText">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a href="index.html">Home</a></li>
-					<li class="nav-item"><a href="#tedxchennai">TEDx Chennai</a></li>
+					<li class="nav-item"><a href="gallery.html">gallery</a></li>
 					<!--<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
 					<li class="nav-item"><a href="#team">Team</a></li>
 					<li class="nav-item"><a href="#contact">Contact</a></li>
@@ -280,21 +280,21 @@
 						<div class="col-md-6 col-lg-4">
 							<h5 class="title title__h6 text_uppercase">Contact</h5>
 							<ul class="footer__contacts list-unstyled">
-								<li>E. : maaz.tedxchennai@gmail.com</li>
-								<li>T. : +91-9711806060</li>
+								<li><a href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
+								<li><a href="tel:+91-9711806060">T. : +91-9711806060</a></li>
 							</ul>
 						</div>
 						<div class="col-md-6 col-lg-4">
 							<h5 class="title title__h6 text_uppercase">Social</h5>
 							<ul class="footer__contacts list-unstyled">
-								<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagrem</a></li>
+								<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagram</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</footer>
 		
-	<
+
 		<!-- PhotoSwipe -->
 		<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="pswp__bg"></div>
