--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 	window.onscroll=()=>{
   const nav = document.querySelector('#navmenu');
   if(this.scrollY <= 500)
-   nav.style.backgroundColor = 'transparent';
+   nav.style.backgroundColor = 'black';
    else nav.style.backgroundColor = 'black';
 };
 </script>
@@ -54,11 +54,11 @@
 
 		<div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="#hello">About</a></li>
-				<li class="nav-item"><a href="#Gallery">Past Events</a></li>
-				<li class="nav-item"><a href="#speaker">Speakers</a></li>
-				<li class="nav-item"><a href="#tickets">Tickets</a></li>
-				<li class="nav-item"><a href="contact.html">Contact</a></li>
+                <li class="nav-item"><a href="index.html">Home</a></li>
+				<li class="nav-item"><a href="about.html">About</a></li>
+			<!--	<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
+				<li class="nav-item"><a href="index.html/#tickets">Tickets</a></li>
+				<li class="nav-item"><a href="#contact">Contact</a></li>
 				
             </ul>
 		</div>
@@ -279,14 +279,14 @@
 				<div class="col-md-6 col-lg-4">
 					<h5 class="title title__h6 text_uppercase">Contact</h5>
 					<ul class="footer__contacts list-unstyled">
-						<li>E. : maaz.tedxchennai@gmail.com</li>
-						<li>T. : +91-9711806060</li>
+						<li><a href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
+								<li><a href="tel:+91-9711806060">T. : +91-9711806060</a></li>
 					</ul>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<h5 class="title title__h6 text_uppercase">Social</h5>
 					<ul class="footer__contacts list-unstyled">
-						<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagrem</a></li>
+						<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagram</a></li>
 					</ul>
 				</div>
 			</div>
@@ -449,5 +449,4 @@ window.onload = function() {
 
 </body>
 
-<!-- Mirrored from netgon.net/artstyles/oliver/new/dark/gallery.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 22 Nov 2019 14:56:08 GMT -->
 </html>
