--- a/index.html
+++ b/index.html
@@ -720,14 +720,14 @@ with “What IF”.
 					<div class="col-md-6 col-lg-4">
 						<h5 class="title title__h6 text_uppercase">Contact</h5>
 						<ul class="footer__contacts list-unstyled">
-							<li>E. : maaz.tedxchennai@gmail.com</li>
-							<li>T. : +91-9711806060</li>
+							<li><a href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
+							<li><a href="tel:+91-9711806060">T. : +91-9711806060</a></li>
 						</ul>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<h5 class="title title__h6 text_uppercase">Social</h5>
 						<ul class="footer__contacts list-unstyled">
-							<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagrem</a></li>
+							<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagram</a></li>
 						</ul>
 					</div>
 				</div>
@@ -778,18 +778,18 @@ with “What IF”.
 	<div class="popup popup-overlay">
 	    <button id="close-popup" class="popup__btn-close" aria-label="Close">close</button>
 	    <div class="popup-inner">
-		    <form id="contact-form" data-toggle="validator">
+		    <form id="contact-form" action="email.php" method="post" target="_blank" data-toggle="validator">
 			    <div class="container container_md">
 			        <div class="row">
 				        <div class="col-lg-6">
                             <div class="form-group">
-						        <label for="firstName" class="label">First Name *</label>
+						        <label for="firstName" id="name55" class="label">First Name *</label>
                                 <input type="text" class="form-control input" id="firstName" required data-error="Please, enter your first name." autocomplete="off">
 						    </div>
 				        </div>
 				        <div class="col-lg-6">
                             <div class="form-group">
-						        <label for="lastName" class="label">Last Name *</label>
+						        <label for="lastName" id="lastname55" class="label">Last Name *</label>
                                 <input type="text" class="form-control input" id="lastName" required data-error="Please, enter your last name." autocomplete="off">
 						    </div>
 				        </div>
@@ -797,13 +797,13 @@ with “What IF”.
 			        <div class="row">
 				        <div class="col-lg-6">
                             <div class="form-group">
-						        <label for="email" class="label">Email *</label>
+						        <label for="email" id="email55" class="label">Email *</label>
                                 <input type="email" class="form-control input" id="email" required data-error="Please, enter your email." autocomplete="off">
 						    </div>
 				        </div>
 				        <div class="col-lg-6">
                             <div class="form-group">
-						        <label for="phone" class="label">Phone *</label>
+						        <label for="phone" id="phoneno" class="label">Phone *</label>
                                 <input type="tel" class="form-control input" id="phone" required data-error="Please, enter your phone." autocomplete="off">
 						    </div>
 				        </div>
@@ -811,7 +811,7 @@ with “What IF”.
                     <div class="row">
 				        <div class="col-lg-12">
 					        <div class="form-group">
-						        <label for="message" class="label">Your Message ... *</label>
+						        <label for="message"  id="message"class="label">Your Message ... *</label>
 						        <textarea class="form-control input" id="message" rows="3" required data-error="Please, enter message."></textarea>
 						    </div>
 					        <div class="btn-block text-center">
