--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 			<div class="collapse navbar-collapse" id="navbarText">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a href="index.html">Home</a></li>
-					<li class="nav-item"><a href="gallery.html">gallery</a></li>
+					<li class="nav-item"><a href="gallery.html">Gallery</a></li>
 					<!--<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
 					<li class="nav-item"><a href="#team">Team</a></li>
 					<li class="nav-item"><a href="#contact">Contact</a></li>
@@ -127,7 +127,7 @@
 										<br>
 										<br>
 										<br>
-									<h2 class="title title__h1">TEDxChennai</h2>
+									<h2 class="title title__h1" style="color:#e62b1e">TEDxChennai</h2>
 								</header>
 								
 								<div class="item-news__paragraph item-news__paragraph_line">
