--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta charset="utf-8" />
 	<meta info="Tedx"/>
 	
-    <title>TEDx Chennai</title>
+    <title >TEDx Chennai</title>
 
 	<!-- Meta Data -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -82,7 +82,7 @@
 	    <div class="container">
             <div class="hero__caption" data-start="opacity:1; transform[swing]:translateY(0px)" data-500-start="opacity:0; transform[swing]:translateY(-100px)">
 			    <div class="hero__row">
-		            <h6 class="title__h6 title">TEDxChennai</h6>
+		            <h6 class="title__h6 title" style="color:#e62b1e">TEDxChennai</h6>
 			        <h2 class="title__h1 hero__title hero__title_line">Ideas Worth Spreading</h2>
 				    <p class="hero__description">
 							Imagine a day filled with brilliant speakers, thought-provoking videos and mind-blowing conversations. The next revolution won't be the one where we bring our guns, it will be the one where we bring our ideas.	</p>
