--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 						<br>
 						<br></div>
 						<div>
-								<p> <span class="initial_letter">TEDx</span>is a grassroots initiative, created in the spirit of TED’s overall mission to research and discover “ideas worth spreading.” TEDx brings the spirit of TED to local communities around the globe via “rules and tools”. TEDx events are organized by passionate individuals who seek to uncover new ideas and the latest research in their local areas and spark conversations in their communities. 
+								<p> <span class="initial_letter">TED<sup>x</sup></span>is a grassroots initiative, created in the spirit of TED’s overall mission to research and discover “ideas worth spreading.” TEDx brings the spirit of TED to local communities around the globe via “rules and tools”. TEDx events are organized by passionate individuals who seek to uncover new ideas and the latest research in their local areas and spark conversations in their communities. 
 								</p>
 								<footer class="item-news__footer">
 										<a class="btn" target="blank" rel=”noopener” rel=”noreferrer” rel=”noopener” rel=”noreferrer” href="https://www.tedx.com">Read More</a>
@@ -127,7 +127,7 @@
 										<br>
 										<br>
 										<br>
-									<h2 class="title title__h1" style="color:#e62b1e">TEDxChennai</h2>
+									<h2 class="title title__h1" style="color:#e62b1e">TED<sup>x</sup>Chennai</h2>
 								</header>
 								
 								<div class="item-news__paragraph item-news__paragraph_line">
