--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 										<br>
 										<br>
 										<br>
-									<h2 class="title title__h1" style="color:#e62b1e">TED<sup>x</sup>Chennai</h2>
+									<h2 class="title title__h1" style="color:#e62b1e">TED<sup>x</sup><span style="color: white">Chennai</span></h2>
 								</header>
 								
 								<div class="item-news__paragraph item-news__paragraph_line">
